# mbzirc

mbzirc_ign/config/: quad1_with_gripper_config.yaml  quad2_with_gripper_config.yaml
mbzirc_ign/models/sensors/mbzirc_hd_camera/: model.sdf
mbzirc_ign/models/sensors/mbzirc_rgbd_camera/: model.sdf
mbzirc_ign/models/sensors/mbzirc_vga_camera/: model.sdf
mbzirc_ign/worlds/: coast.sdf  coast_demo.sdf
mbzirc_joystick101/: CMakeLists.txt  package.xml
mbzirc_joystick101/config/: params.yaml
mbzirc_joystick101/include/: config_param.h  global_header.h  joy_xbox360_lib.h  mbzirc_joy_ctrl_ros2_lib.h  mbzirc_quad_imu_data_lib.h  misc_func.h
mbzirc_joystick101/launch/: mbzirc_joy_ctrl_test.launch.py
mbzirc_joystick101/lib/: config_param.cpp  joy_xbox360_lib.cpp  mbzirc_joy_ctrl_ros2_lib.cpp  mbzirc_quad_imu_data_lib.cpp  misc_func.cpp
mbzirc_joystick101/src/: main.cpp
